package booking.compositePrototype;

public interface Department {
    void printDepartmentName();
}