@startuml

title __COMPOSITEPROTOTYPE's Class Diagram__\n

  package  {
    package booking {
      package booking.compositePrototype {
        class CompositeDemo {
            {static} + main()
        }
      }
    }
  }
  

  package  {
    package booking {
      package booking.compositePrototype {
        interface Department {
            {abstract} + printDepartmentName()
        }
      }
    }
  }
  

  package  {
    package booking {
      package booking.compositePrototype {
        class FinancialDepartment {
            - id : Integer
            - name : String
            + FinancialDepartment()
            + printDepartmentName()
        }
      }
    }
  }
  

  package  {
    package booking {
      package booking.compositePrototype {
        class HeadDepartment {
            - id : Integer
            - name : String
            - childDepartments : List<Department>
            + HeadDepartment()
            + printDepartmentName()
            + addDepartment()
            + removeDepartment()
        }
      }
    }
  }
  

  package  {
    package booking {
      package booking.compositePrototype {
        class SalesDepartment {
            - id : Integer
            - name : String
            + SalesDepartment()
            + printDepartmentName()
        }
      }
    }
  }
  

  FinancialDepartment -up-|> Department
  HeadDepartment -up-|> Department
  SalesDepartment -up-|> Department


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
